--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,29 @@
 theme: jekyll-theme-hacker
 name: java.design
-title: null
+title: Programming Snippets
+
+
+baseurl: /
+
+source: .
+destination: ./_site
+permalink: /:title
+paginate: 3
+paginate_path: /page/:num/
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+
+future: true
+
+owner : "Adel Zaitri"
+year : "2021"
+
+# Site Author
+author:
+  name             : "Adel Zaitri"
